PICS-5748: fixed powermock/cobertura problem with new logging
1. Tons of exceptions from any of the tests using PowerMock due to XML parser conflicts. fixed by adding @PowerMockIgnore to all powermock tests

2. OutOfMemoryErrors/PermGen when creating the reports. Modified POM to give surefire more memory.

3. Cobertura reports when to 0% coverage everywhere. 1 & 2 fixes this.